--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
 </head>
 
 <body>
-    
+    <div id="boardContainer">
+        <div id="0" class="boardSquare"></div>
+        <div id="1" class="boardSquare"></div>
+        <div id="2" class="boardSquare"></div>
+        <div id="3" class="boardSquare"></div>
+        <div id="4" class="boardSquare"></div>
+        <div id="5" class="boardSquare"></div>
+        <div id="6" class="boardSquare"></div>
+        <div id="7" class="boardSquare"></div>
+        <div id="8" class="boardSquare"></div>
+    </div>
 
     <script src="scripts.js"></script>
 </body>
