--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <div id="8" class="boardSquare"></div>
     </div>
 
+    <div id="won"></div>
+
     <script src="scripts.js"></script>
 </body>
 
