Accept input for player name's, used to display winner's name

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 </head>
 
 <body>
+    <form id="newGame" class="newGameHidden">
+        <label for="player1Name">Player 1 name:</label><br>
+        <input type="text" id="player1Name" name="player1Name"><br>
+        <label for="player2Name">Player 2 name:</label><br>
+        <input type="text" id="player2Name" name="player2Name"><br>
+        <button id="btnStart" type="button">Start/Reset</button>
+    </form>
+    
     <div id="boardContainer">
         <div id="0" class="boardSquare"></div>
         <div id="1" class="boardSquare"></div>
